# dimarch-voice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
scripts/: build-whisper-cpp-vulkan.sh  check-system.sh
src/dimarch_scribe/: cli.py  config.py  errors.py  paths.py  scribe.py
src/dimarch_scribe/transcription/: audio.py  job.py  output.py  punctuation.py  segments.py
src/dimarch_scribe/transcription/engines/: base.py  faster_whisper.py  whisper_cpp.py
src/dimarch_voice/: cli.py  config.py  errors.py  paths.py  scribe.py
src/dimarch_voice/transcription/: output.py
src/dimarch_voice/transcription/engines/: whisper_cpp.py
tests/: conftest.py  test_audio.py  test_cli.py  test_integration.py  test_output.py  test_punctuation.py  test_segments.py
