[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dimarch-scribe"
version = "0.2.0"
description = "Local speech-to-text toolkit for Arch Linux: transcription, dictation, meeting capture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "wtpsplit[onnx-cpu]>=2.2",
    "onnxruntime>=1.27",
    "sentencepiece>=0.2",
    "huggingface_hub>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dscribe = "dimarch_scribe.cli:app"
scribe = "dimarch_scribe.scribe:app"

[project.urls]
Repository = "https://github.com/dmitrax/dimarch-scribe"

[tool.setuptools.packages.find]
where = ["src"]
